# error-fix-engine

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
config/: discovered_errors.yaml  errors.yaml
content/: generated.yaml
content/errors/: docker-exit-code-1.md  docker-image-not-found.md  docker-oomkilled.md  docker-permission-denied.md  docker-port-already-allocated.md  gemini-401.md  gemini-403.md  gemini-429.md  gemini-safety.md  kubernetes-crashloopbackoff.md  kubernetes-imagepullbackoff.md  openai-400.md  openai-401.md  openai-429.md  openai-500.md  openai-503.md  openai-context-length-exceeded.md
scripts/: run_pipeline.py
site/: 404.html  CNAME  index.html  robots.txt  sitemap.xml
site/assets/: style.css
site/errors/: docker-exit-code-1.html  docker-image-not-found.html  docker-oomkilled.html  docker-permission-denied.html  docker-port-already-allocated.html  gemini-401.html  gemini-403.html  gemini-429.html  gemini-safety.html  kubernetes-crashloopbackoff.html  kubernetes-imagepullbackoff.html  openai-400.html  openai-401.html  openai-429.html  openai-500.html  openai-503.html  openai-context-length-exceeded.html
src/: __init__.py  authors.py  config_loader.py  discover.py  generator.py  logger.py  models.py  site_builder.py
templates/: 404.html  base.html  error_page.html  index.html  sitemap.xml
templates/assets/: style.css
